Updated readme; fixed header and footer margins on mobile devices

--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -1,20 +1,27 @@
 // For scss not originally included in the template.
-// Use !important to override original settings (bad form, but makes maintenance easier)
+// Import this at the bottom of main.scss to ensure attributes can override defaults and all mixins are defined.
+// Use !important to override original attributes (bad form, but makes maintenance easier).
 
-#header {
-    h1 {
-        left: 5.5em !important; // Original 1em
-    }
-    nav {
-        right: 5em !important; // Original 0.5em
-    }
-}
+@include skel-breakpoints((
+    desktop: '(min-width: 1000px)'
+));
 
-#footer {
-    ul.actions {
-        left: 5.5em !important; // Original 1em
+@include breakpoint(desktop) {
+    #header {
+        h1 {
+            left: 5.5em !important; // Original 1em
+        }
+        nav {
+            right: 5em !important; // Original 0.5em
+        }
     }
-    ul.menu {
-        right: 5em !important; // Original 2em
+
+    #footer {
+        ul.actions {
+            left: 5.5em !important; // Original 1em
+        }
+        ul.menu {
+            right: 5em !important; // Original 2em
+        }
     }
 }
